src/objects/Puppy__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>$User.Street + &quot; &quot; + $User.City + &quot; &quot; + $User.State   + &quot; &quot; +$User.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( Picture_Path__c, Name,150,150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>$User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_Path__c</fullName>
        <defaultValue>&apos;/servlet/servlet.FileDownload?file=015j00000005HzO&apos;</defaultValue>
        <label>Picture Path</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puppy_Age__c</fullName>
        <formula>Text(ROUND((Today() -  Date_of_Birth__c)/365.2425,0)) + &apos; Years&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puppy Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puppy_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Puppy Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Puppies</relationshipLabel>
        <relationshipName>Puppies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>CASE( Registration_Status__c ,
&apos;Approved&apos;,IMAGE(&apos;/servlet/servlet.FileDownload?file=015j00000005I3l&apos;,&apos;Approved&apos;,150,150),
&apos;Pending&apos;,IMAGE(&apos;/servlet/servlet.FileDownload?file=015j00000005I3q&apos;,&apos;Pending&apos;,150,150),
&apos;Draft&apos;,IMAGE(&apos;/servlet/servlet.FileDownload?file=015j00000005I83&apos;,&apos;Draft&apos;,150,150),&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Puppy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Image__c</columns>
        <columns>NAME</columns>
        <columns>Color__c</columns>
        <columns>Puppy_Age__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Puppy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Puppies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>